# cubempc

./: .gitignore  README.md  pyproject.toml  requirements.txt
cubempc/: algebra_cache.py  async_util.py  batch_payload.py  config.py  csv_io.py  field.py  host_layout.py  messages.py  metrics.py  poly.py  profiling.py  rs_decode.py  shamir.py  vss_profiling.py
cubempc/benchmarks/: benchmark_warmup.py  distributed.py  migrate_mpc_call_to_batch.py  mpc_stage_worker.py  run_mpc.py  run_mpc_stage_raw.py  run_mul_stage_benchmark.py  run_mul_standalone.py  run_rg_standalone.py  run_rs_standalone.py  run_vss_benchmark.py  run_vss_stage_benchmark.py  run_vss_standalone.py  stage_raw_io.py  subprotocol_worker.py
cubempc/circuits/: __init__.py  circuit.py  generator.py
cubempc/network/: __init__.py  coordinator.py  node.py  ports.py
cubempc/protocols/: __init__.py  mpc.py  multiplication.py  resharing.py  rg.py  vss.py
cubempc/utils/: bw.py
